# agent-metricsifter

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude/skills/metricsifter/: SKILL.md
scripts/: prometheus_to_dataframe.py  sift_metrics.py
skills/grafana-incident-dashboard/: SKILL.md
skills/metricsifter/: SKILL.md
skills/metricsifter-calibration/: SKILL.md
skills/metricsifter/scripts/: sift_metrics.py
skills/metricsifter/tests/: test_sift_metrics.py
skills/metricsifter/tests/fixtures/: prometheus_range_response.json
tests/: test_prometheus_to_dataframe.py  test_sift_metrics.py
