[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-metricsifter"
version = "0.1.0"
description = "Claude Code Agent Skill for filtering Prometheus metrics using metricsifter"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "metricsifter @ git+https://github.com/ai4sre/metricsifter.git@main",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
