[project]
name = "agent-metricsifter"
version = "0.1.0"
description = "Claude Code Agent Skill for filtering Prometheus metrics using metricsifter"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "metricsifter @ git+https://github.com/ai4sre/metricsifter.git@1e0ccd6040df9a27e03c75f1db210eef39d4d588",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
